custom-ns/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom
  namespace: custom
  labels:
    app: custom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom
  template:
    metadata:
      labels:
        app: custom
    spec: 
      containers:
      - name: custom
        image: nginx
        ports:
        - containerPort: 80
