custom-ns/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom
  namespace: custom
  labels:
    app: custom
spec:
  selector:
    app: custom
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
