custom-ns/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: custom
  namespace: custom
spec:
  rules:
  - host: custom.minikube.com
    http:
      paths:
      - backend:
          serviceName: custom
          servicePort: 80
